--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 PORT=3446
 DEFAULT_DIR=downloads
-SPACE_NAME=!SPACE_NAME
-SPACE_ENDPOINT=!SPACE_ENDPOINT
-AVAILABLE_USER_IDS=!AVAILABLE_USER_IDS
-BOT_TOKEN=!BOT_TOKEN
+SPACE_NAME=m3u8
+SPACE_ENDPOINT=bot
+AVAILABLE_USER_IDS=1760280598
+BOT_TOKEN=6135772410:AAHvOnKtVflG23aAKupNtZeQLjvDvsJavuI
 SERVICE_NAME=converter_m3u8_to_mp4_bot
