--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=3446
 DEFAULT_DIR=downloads
-SPACE_NAME=m3u8
-SPACE_ENDPOINT=bot
+SPACE_NAME=nhendpoint
+SPACE_ENDPOINT=https://data.endpoint.space/cle0erklq002308l4lnlq663u
 AVAILABLE_USER_IDS=1760280598
 BOT_TOKEN=6135772410:AAHvOnKtVflG23aAKupNtZeQLjvDvsJavuI
 SERVICE_NAME=converter_m3u8_to_mp4_bot
